--- a/static/postpage.html
+++ b/static/postpage.html
@@ -12,7 +12,7 @@
 
     <header class="postpageheader">
 
-        <a href="../homePage.html">
+        <a href="../homepage.html">
             <h1>mainpage</h1>
         </a>
         this is the <u>blog</u> post <u>header</u>
